# useragent-parser-sdk

./: AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  Makefile  README.md  SECURITY.md
.sdk/: package-lock.json  package.json
go/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  go.mod  useragent-parser.go
go-cli/: .gitignore  Makefile  README.md  go.mod  main.go  words.go
go-mcp/: .gitignore  Makefile  README.md  go.mod  main.go  tools.go
lua/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.lua  features.lua  useragent-parser.rockspec  useragent-parser_sdk.lua  useragent-parser_types.lua
php/: AGENTS.md  CLAUDE.md  (+6 more)
py/: AGENTS.md  CLAUDE.md  README.md  REFERENCE.md  config.py  features.py  pyproject.toml  useragentparser_sdk.py  useragentparser_types.py
py/core/: context.py  control.py  error.py  operation.py  response.py  result.py  spec.py  utility_type.py
py/entity/: parse_entity.py
py/feature/: audit_feature.py  cache_feature.py  clienttrack_feature.py  idempotency_feature.py  netsim_feature.py  paging_feature.py  proxy_feature.py  rbac_feature.py  telemetry_feature.py  test_feature.py
py/test/: runner.py  test_exists.py  test_netsim.py  test_parse_direct.py  test_parse_entity.py  test_pipeline.py  test_primary_utility.py  test_readme_examples.py
py/utility/: done.py  feature_add.py  feature_hook.py  fetcher.py  make_error.py  make_fetch_def.py  make_point.py  make_request.py  make_result.py  make_spec.py  make_url.py  prepare_body.py  prepare_params.py  register.py  result_basic.py  result_body.py  transform_request.py  transform_response.py
(+408 files in other folders)
